# siliconsneaker2

./: .gitignore  Cargo.toml  README.md  create_windows_dist.sh  debug.sh  siliconsneaker2.desktop  utils.py
deploy/windows/: SiliconSneaker2 Windows x64 Setup.nsi
doc/: help.asc  help.html  installed.txt  makedoc.sh
i18n/en-US/: gui.ftl
i18n/fr/: gui.ftl
icons/: update.sh
runs/: 5A583116.FIT  canada.fit  christmas_eve.FIT  half_marathon.fit  mountain_hike.fit  neighborhoodwalk.fit  newzealand.fit
src/: config.rs  data.rs  gui.rs  i18n.rs  main.rs
