[package]
name = "siliconsneaker2"
version = "0.7.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
compile-time = "0.2.0"
directories = "6.0.0"
fitparser = "0.10.0"
fluent = "0.16.1"
glib = "0.21.5"
gtk4 = "0.10.2"
libshumate = "0.7.0"
once_cell = "1.19.0"
plotters = "0.3.7"
plotters-cairo = "0.8.0"
semver = "1.0.27"
serde = "1.0.228"
toml = "0.9.8"
unic-langid = "0.9.5"

[build-dependencies]
toml = "0.9.8"
